--- a/eng/Subsets.props
+++ b/eng/Subsets.props
@@ -53,7 +53,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <DefaultLibrariesSubsets>depproj-native-ref-src</DefaultLibrariesSubsets>
+    <DefaultLibrariesSubsets>native-ref-src</DefaultLibrariesSubsets>
     <DefaultLibrariesSubsets Condition="'$(DotNetBuildFromSource)' != 'true' and '$(BuildTargetFramework)' == '$(NetCoreAppCurrent)'">$(DefaultLibrariesSubsets)-apicompat</DefaultLibrariesSubsets>
     <DefaultLibrariesSubsets Condition="'$(DotNetBuildFromSource)' != 'true' and '$(BuildAllConfigurations)' != 'true'">$(DefaultLibrariesSubsets)-pretest</DefaultLibrariesSubsets>
     <DefaultLibrariesSubsets Condition="'$(IncludeLibrariesTestSubset)' == 'true'">$(DefaultLibrariesSubsets)-test</DefaultLibrariesSubsets>
@@ -85,7 +85,6 @@
 
   <ItemGroup>
     <!-- Libraries -->
-    <SubsetName Include="DepProj" Category="Libraries" Description="The upfront restore projects which are necessary to compose the libraries." />
     <SubsetName Include="Native" Category="Libraries" Description="The native libraries used in the shared framework." />
     <SubsetName Include="Ref" Category="Libraries" Description="The managed reference libraries." />
     <SubsetName Include="Src" Category="Libraries" Description="The managed implementation libraries." />
@@ -181,10 +180,6 @@
   </ItemGroup>
 
   <!-- Libraries sets -->
-  <ItemGroup Condition="$(_subsetCategory.Contains('libraries')) and $(_subset.Contains('-depproj-'))">
-    <LibrariesProject Include="$(LibrariesProjectRoot)restore\depproj.proj" Build="false" />
-  </ItemGroup>
-
   <ItemGroup Condition="$(_subsetCategory.Contains('libraries')) and $(_subset.Contains('-native-'))">
     <LibrariesProject Include="$(LibrariesProjectRoot)Native\build-native.proj" />
   </ItemGroup>
