--- a/src/libraries/shims/Directory.Build.props
+++ b/src/libraries/shims/Directory.Build.props
@@ -20,6 +20,10 @@
     <HasMatchingContract>true</HasMatchingContract>
     <!-- Shims have no code in them. No point in running IL linker over them -->
     <ILLinkTrimAssembly>false</ILLinkTrimAssembly>
+    
+    <!-- Override RefPaths to point to the targeting packs. -->
+    <NetFxRefPath>$(NuGetPackageRoot)microsoft.netframework.referenceassemblies.$(NetFrameworkCurrent)\$(MicrosoftNetFrameworkReferenceAssembliesVersion)\build\.NETFramework\v4.7.2\</NetFxRefPath>
+    <NETStandard21RefPath>$(NuGetPackageRoot)netstandard.library\$(NETStandardLibraryVersion)\build\netstandard2.1\ref\</NETStandard21RefPath>
   </PropertyGroup>
 
   <ItemGroup Condition="'$(MSBuildProjectName)' == 'System.Runtime' or '$(MSBuildProjectName)' == 'mscorlib' or '$(MSBuildProjectName)' == 'netstandard'">
